--- a/src/symRMSD/CMakeLists.txt
+++ b/src/symRMSD/CMakeLists.txt
@@ -1,7 +1,7 @@
 list( APPEND f90_src mod_params.f90 )
 list( APPEND f90_src mod_group_permutation.f90 )
 list( APPEND f90_src mod_det.f90 )
-list( APPEND f90_src mod_rotation_matrix.f90 )
+list( APPEND f90_src mod_rotation.f90 )
 list( APPEND f90_src mod_mol_block.f90 )
 list( APPEND f90_src mod_Hungarian.f90 )
 list( APPEND f90_src mod_c_matrix.f90 )
