--- a/src/mobbrmsd/test/CMakeLists.txt
+++ b/src/mobbrmsd/test/CMakeLists.txt
@@ -1,16 +1,27 @@
 find_package( unittest REQUIRED )
 find_package( purelapack REQUIRED )
 
-set(LIB_MOD_2D_DIR ${CMAKE_CURRENT_BINARY_DIR}/../mobbrmsd_2d/mod_files)
 set(TARGET_2D ${PROJECT_NAME}_2d)
+set(TARGET_3D ${PROJECT_NAME}_3d)
 
-add_executable( test_gemm )
-target_sources( test_gemm PRIVATE test_gemm.f90 )
-target_include_directories( test_gemm PRIVATE ${unittest_DIR}/mod_files )
-target_include_directories( test_gemm PRIVATE ${LIB_MOD_2D_DIR} )
-target_link_libraries( test_gemm PRIVATE unittest )
-target_link_libraries( test_gemm PRIVATE ${TARGET_2D} )
-add_test( NAME test_gemm COMMAND test_gemm )
+set(LIB_MOD_2D_DIR ${CMAKE_CURRENT_BINARY_DIR}/../${TARGET_2D}/mod_files)
+set(LIB_MOD_3D_DIR ${CMAKE_CURRENT_BINARY_DIR}/../${TARGET_3D}/mod_files)
+
+add_executable( test_gemm_2d )
+target_sources( test_gemm_2d PRIVATE test_gemm.f90 )
+target_include_directories( test_gemm_2d PRIVATE ${unittest_DIR}/mod_files )
+target_include_directories( test_gemm_2d PRIVATE ${LIB_MOD_2D_DIR} )
+target_link_libraries( test_gemm_2d PRIVATE unittest )
+target_link_libraries( test_gemm_2d PRIVATE ${TARGET_2D} )
+add_test( NAME test_gemm_2d COMMAND test_gemm_2d )
+
+add_executable( test_gemm_3d )
+target_sources( test_gemm_3d PRIVATE test_gemm.f90 )
+target_include_directories( test_gemm_3d PRIVATE ${unittest_DIR}/mod_files )
+target_include_directories( test_gemm_3d PRIVATE ${LIB_MOD_3D_DIR} )
+target_link_libraries( test_gemm_3d PRIVATE unittest )
+target_link_libraries( test_gemm_3d PRIVATE ${TARGET_3D} )
+add_test( NAME test_gemm_3d COMMAND test_gemm_3d )
 
 add_executable( test_group_permutation )
 target_sources( test_group_permutation PRIVATE test_group_permutation.f90 )
